If a plan specifies features to be granted to domain owners, those features will be enabled on the Create Virtual Server page when the plan is selected. Otherwise, defaults set on the Features and Plugins page will be used.
Added --email-only flags to the list-users.pl and list-domains.pl API scripts.
Added a button to the Edit Account Plan page to create a new plan cloned from an existing one.
Added a Module Config option for additional gzip command-line parameters, like --best or --rsyncable.
Re-factored code for deleting tables created by installed scripts, and better handle the case where a script's database is missing.
Converted libraries to use Webmin's new WebminCore module, where available. This leads to a signficant improvement in memory use and speed.
Added support for migrating Plesk 9 backups, which have a different format to Plesk 7 and 8.
Allowed script installers can now be set at the plan level and on the Edit Owner Limits page. They can also be set on the command line with create-plan, modify-plan and modify-limits commands.
Added the --plan flag to the create-reseller API command, to copy limits from a plan.
Link script names to their home pages.
Added option to not add MX records for secondary mail servers.
Added an option on the Batch Create Users page to generate passwords randomly, and a --random-pass flag to create-user.pl.
Added a Module Config option to disallow switching to Usermin as a mailbox user by domain owners.
Overall network traffic is now collected regularly, and can be displayed on the System Statistics page.
---- Changes since 3.67 ----
Updated the phpMyAdmin script installer to versions 3.1.3.1 and 2.11.9.5, and Trac to 0.11.4rc2.
Updated the Forwards, Passwd, Chora, Vacation and Gollem scripts from the Horde family to their latest versions.
Global template variables are now also available to pre- and post-domain creation commands, with the GLOBAL_ prefix.