@@ -93,6 +93,13 @@ index_fstopdesc=The ProFTPd server is currently running and accepting FTP connec
 index_fstart=Start ProFTPd
 index_fstartdesc=The ProFTPd server is currently down, meaning that server owners and mailbox users will not be able to connect via FTP. Click this button to start it.
 index_fmanage=Manage ProFTPd
+index_sshname=SSH Server
+index_sshmanage=Manage SSH Server
+index_sshstop=Stop SSH Server
+index_sshstart=Start SSH Server
+index_sshrestart=Restart SSH Server
+index_sshstopdesc=The SSH server is currently running and accepting remote logins and file transfers. Click this button to shut it down.
+index_sshstartdesc=The SSH server is currently down, meaning that neither server owners or <tt>root</tt> will be able to login. Click this button to start it.
 index_myname=MySQL Database Server
 index_mystop=Stop MySQL
 index_myrestart=Restart MySQL
